# sd-housing-permits

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: refresh.yml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: approval_timelines.parquet  bc_code_summary.parquet  construction_by_zip.parquet  housing_units_by_year.parquet  permit_summary.parquet  permit_volume_monthly.parquet  solar_permits_monthly.parquet  top_permit_types.parquet
pipeline/: build.py  ingest.py  transform.py
